vlib/v/checker/tests/const_expr_match_range_invalid_err.out
vlib/v/checker/tests/const_expr_match_range_invalid_err.vv:6:2: error: the range type and the match condition type should match
    4 | 
    5 | match 5 {
    6 |     start...`1` {
      |     ~~~~~~~~~~~
    7 |         println(start)
    8 |     }
Details: 
match condition type: int
          range type: rune
vlib/v/checker/tests/const_expr_match_range_invalid_err.vv:9:2: error: the low and high parts of a range expression, should have matching types
    7 |         println(start)
    8 |     }
    9 |     'str'...end {
      |     ~~~~~~~~~~~
   10 |         println(end)
   11 |     }
Details: 
 low part type: string
high part type: int literal
vlib/v/checker/tests/const_expr_match_range_invalid_err.vv:9:2: error: the range type and the match condition type should match
    7 |         println(start)
    8 |     }
    9 |     'str'...end {
      |     ~~~~~~~~~~~
   10 |         println(end)
   11 |     }
Details: 
match condition type: int
          range type: string
vlib/v/checker/tests/const_expr_match_range_invalid_err.vv:9:2: error: match branch range expressions need the start value to be known at compile time (only enums, const or literals are supported)
    7 |         println(start)
    8 |     }
    9 |     'str'...end {
      |     ~~~~~
   10 |         println(end)
   11 |     }
